--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,3 +21,62 @@ button:hover{
     border-radius: 4px;
     background-color: lightgrey;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    right: 0px;
+    width: 100%;
+    background-color: #A9D3F9;
+}
+li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: ease-in-out 0.4s;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #0b75d8;
+  }
+  
+  .active {
+    background-color: #6aa9e4;
+  }
+/*
+.navbar {
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    z-index:100;
+    background-color: #A9D3F9; /*a9f9e6*/
+    /*box-shadow:  0px 8px 16px 0px rgba(0,0,0,0.5);
+}
+
+.navbar a{
+    float: left;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    padding: 20px 16px;
+    vertical-align: middle;
+    transition: 0.4s;
+}*/
+
+.container {
+    padding-top: 65px;
+    text-align: left;
+    width: 80%;
+}
