--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,7 +39,7 @@ p {
     left:0;
 }
 
-button {
+/*button {
     border: none;
     background-color: transparent;
     outline: none;
@@ -58,8 +58,41 @@ button.visible:hover{
     border: 1px solid black;
     border-radius: 4px;
     background-color: rgba(134,236,231,0.7);
+    
+}*/
+button {
+    background-color: transparent;
+    border:none;
+    outline: none;
+    font-size: 17px;
+    color: rgb(86, 163, 235);
+    font-family: 'Ubuntu', Calibri, 'Gill Sans', sans-serif;
+    text-decoration: none;
+    position: relative;
+    padding: 0;
 }
 
+button:hover {
+    color: rgb(86, 163, 235)
+}
+button::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color:rgb(86, 163, 235);
+    visibility: hidden;
+    transform: scaleX(0);
+    transition:all .5s cubic-bezier(1,.25,0,.75) 0s;
+    left:0;
+}
+button:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+    left:0;
+}
 ul {
     list-style-type: none;
     margin: 0;
