--- a/style.css
+++ b/style.css
@@ -15,14 +15,12 @@ input[type=text], select{
     background-color: transparent;
     
 }
-
 .container{
     width: 80%;
     padding-top: 65px;
     max-width: 550px;
     text-align: center;
     font-family: 'Ubuntu', Calibri;
-    
 }
 
 #about {
@@ -178,7 +176,7 @@ li {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 12px 16px;
     text-decoration: none;
     font-size:16px;
 
@@ -198,3 +196,16 @@ li {
   li a.active {
     background-color: rgba(255, 205, 238, 0.7); /*#86ece7*/
   }
+
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.reponsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }.topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+}
