--- a/arysia/text.css
+++ b/arysia/text.css
@@ -2,6 +2,19 @@
 @import url("https://fonts.googleapis.com/css?family=Shippori Mincho");
 @import url("https://fonts.googleapis.com/css?family=Crimson Text");
 
+@media only screen and (max-width:500px) {
+  #main{
+    display: none;
+  }
+  #tooSmall{
+    opacity: 1;
+    color: white;
+    font-size: 25px;
+    display:inline-flex;
+    text-align: center;
+    vertical-align: center;
+  }
+}
 .understandingArysia { position:relative;height: auto; width:75%; z-index: 2; top: -50px; min-width: 350px;}
 #arysia { position:relative; float:center; top: 20px;}
 
@@ -26,19 +39,24 @@ div {
   animation: fadeInAnimation ease 2s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  color: #9b948b;
+  font-size:16px;
+  /*margin-top: 60px;*/
+  font-family: 'Crimson Text', 'Times New Roman', Times, serif;
 }
 
 #magic{
   width: 60px;
   height: auto;
 }
-#magicLight{
+.imgLink{
+  
   width: 60px;
   height: auto;
   opacity: 0.5;
   transition: ease-in-out 0.2s;
 }
-#magicLight:hover{
+.imgLink:hover{
   opacity: 1;
 }
 @keyframes fadeInAnimation {
@@ -49,34 +67,47 @@ div {
       opacity: 1;
    }
 }
-
+.linkContainer{
+  background-color: blue;
+  width: 90%;
+}
 #magicInfo{
-  color: white;
-  padding-top: 60px;
+  width: 70%;
+  max-width: 600px;
+  color: #9b948b;
+  padding-top: 55px;
   transition: opacity 1s;
+  top: -20px;
 }
 p {
   position: relative;
   top: -60px;
   font-family: 'Crimson Text', Georgia, 'Times New Roman', Times, serif;
 }
+.title {
+  font-family: 'Crimson Text', Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
+}
 
 #challenge{
   font-family: 'IBM Plex Mono', 'Courier New', Courier, monospace !important;
-  color: white;
+  color: #9b948b;
   float: center;
   width: 70%;
   max-width: 600px;
   margin-top: 60px;
 }
 #editor{
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #9b948b;
   width: 200px;
   outline: 0px solid transparent;
 }
 
 svg{
   position: relative;
+}
+#magicSvg{
+  top: -40px;
 }
 body {
   background-image: linear-gradient(#666353 0%, #313131 100%); 
