--- a/mt-practice/stylesheet.css
+++ b/mt-practice/stylesheet.css
@@ -12,7 +12,7 @@ body{
 }
 
 .label{
-    font-family:Arial, Helvetica, sans-serif;
+    /*font-family:Arial, Helvetica, sans-serif;*/
     font-weight: bold;
 }
 
