--- a/mt-practice/stylesheet.css
+++ b/mt-practice/stylesheet.css
@@ -1,7 +1,8 @@
 body{
-    font-size:14px;
+    font-size:16px;
 }
 .userinput{
+    font-family: monospace;
     font-size:12px;
     font-weight: bold;
     color: rgb(17, 113, 126);
